--- a/index.html
+++ b/index.html
@@ -19,14 +19,13 @@
 		<span></span>
     </div>
     <div id="main">
-    	<div id="container">
     		<div id="header">
-                <img class="logo" src="images/logo.png"/>
+<!--                <img class="logo" src="images/logo.png"/>-->
 	    		<div class="menu-wrap">
 
                     <nav class="menu">
                         <ul class="clearfix">
-                            <li><a href="index.html">Home</a></li>
+                            <li><a href="index.html">Kuca</a></li>
                             <li><a href="biography.html">Biography</a></li>
                             <li>
                                 <a href="#">Projects <span class="arrow">&#9660;</span></a>
@@ -46,7 +45,7 @@
     		<span>
     			<h2>Architect</h2>
     		</span>
-    	</div>
+
     </div>
 
     <footer>
