--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                     <nav class="menu">
                         <ul class="clearfix">
-                            <li><a href="index.html">Kuca</a></li>
+                            <li><a href="index.html">Home</a></li>
                             <li><a href="biography.html">Biography</a></li>
                             <li>
                                 <a href="#">Projects <span class="arrow">&#9660;</span></a>
