--- a/index.html
+++ b/index.html
@@ -2,25 +2,19 @@
 <html lang="en">
   <head>
 
-  	<title>Duško Filipović</title>
+  	<title>Duško Filipovski</title>
    
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
     <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 
   </head>
   <body>
-  	<div id="preloader">
-		<span></span>
-		<span></span>
-		<span></span>
-		<span></span>
-    </div>
     <div id="main">
     		<div id="header">
-<!--                <img class="logo" src="images/logo.png"/>-->
+                <!--<img class="logo" src="images/logo.png"/>-->
 	    		<div class="menu-wrap">
 
                     <nav class="menu">
@@ -40,11 +34,11 @@
                 </div>
     		</div>
     		<span>
-    			<h1>Duško <span id="prezime">Filipović</span></h1>
+    			<h1>Duško <span id="prezime">Filipovski</span></h1>
     		</span>
     		<span>
     			<h2>Architect</h2>
-    		</span>
+            </span>
 
     </div>
 
